--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -69,13 +69,14 @@
     width: 100%;
     &-wrapper {
     width: 668px;
-    padding:50px 50px;
+    padding:55px 50px;
     display: flex;
     justify-content: space-between;
     }
     &__social{
       padding: 0;
       margin: 0;
+      padding-left: 67px;
       border: none;
     }
     &__copyright{
