--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -82,16 +82,46 @@
     margin: 0 auto;
     width: 668px;
     padding: 0;
-    margin-top: 65px;
+    margin-top: 48px;
+
+    &__title{
+      font-size:43px;
+      line-height: 50px;
+    }
 
     &__list{
+    padding-top: 28px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     }
     &__item{
-      width: 32%;
-      margin-right: 119px;
+      width: 46%;
+      margin-right: 26px;
+      margin-bottom: 31px;
+      &:nth-child(1){
+        order: 1;
+      }
+      &:nth-child(2){
+        order: 3;
+      }
+      &:nth-child(3){
+        order: 5;
+      }
+      &:nth-child(4){
+        order: 2;
+      }
+      &:nth-child(5){
+        order: 4;
+      }
+      &:nth-child(6){
+        order: 6;
+      }
+      & p{
+        font-size: 20px;
+        line-height: 22px;
+        font-weight: bold;
+      }
     }
   }
 }
