--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -73,14 +73,10 @@
     width: 668px;
     margin: 0 auto;
     padding: 0;
+    margin-bottom: 46px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
-    &__title h1{
-      font-size:43px;
-      line-height:50px;
-    }
 
     &__production{
       margin: 0;
@@ -88,15 +84,37 @@
       display: flex;
       flex-direction: row;
     }
+
     &__title{
+      height: 430px;
       width: 100%;
+      & h1{
+        font-size:43px;
+        line-height:50px;
+        padding-top: 77px;
+      }
     }
+
     &__item{
       margin: 0;
-      padding-right: 0;
+      padding-left: 36px;
+      padding-top: 28px;
+      padding-right: 140px;
       width: 50%;
+      & p{
+        font-size: 20px;
+        line-height: 30px;
+      }
     }
   }
+  .page-preview__item--ico::before{
+    bottom: 22px;
+  }
+  .page-preview__item--color::before{
+    bottom: 20px;
+    right: 28px;
+  }
+
 }
 @media @desktop-widths {
 .page-preview {
