--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -149,32 +149,34 @@
   .featured{
     width: 1050px;
     position: relative;
-    padding-top: 71px;
+    padding-top: 79px;
+    padding-bottom: 48px;
     &__product-week{
       order: -1;
-      padding-left: 35px;
-      padding-right: 35px;
+      padding-left: 24px;
+      padding-right: 31px;
     }
     &__title{
       font-size: 53px;
       line-height: 57px;
       text-transform: none;
       width: 80%;
+      padding-bottom: 26px;
     }
     &__image img{
       z-index: -1;
       top: -140px;
       right: 0;
-      top: 71px;
+      top: 26px;
     }
     &__price{
-      padding-top: 93px;
+      padding-top: 53px;
       margin-left:175px;
-      width: 280px;
+      width: 301px;
     }
     &__buy{
       margin-left:175px;
-      width: 280px;
+      width: 288px;
     }
   }
   .feature-product{
@@ -182,7 +184,8 @@
     padding-bottom: 60px;
     &__description{
       margin-left:175px;
-      width: 280px;
+      width: 282px;
+      margin-bottom: 46px;
     }
     &__list{
       margin-left:175px;
