--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -117,7 +117,14 @@
 
 }
 @media @desktop-widths {
-.page-preview {
-  width: 1050px;
+  .page-preview {
+    width: 1050px;
+    &__title h1{
+      font-size:53px;
+      line-height: 57px;
+    }
+    &__item{
+      padding-right: 305px;
+    }
   }
 }
