--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -103,7 +103,12 @@
       }
     }
     &__name-author{
+      margin: 4px 0;
       font-size: 17px;
+    }
+    &__email-autor{
+      font-size:17px;
+      line-height: 30px;
     }
   }
   .reviews__prev,
@@ -113,7 +118,7 @@
   }
   .control{
     position: absolute;
-    bottom: 13px;
+    bottom: 20px;
     right: 3px;
   }
 }
@@ -121,13 +126,31 @@
 @media @desktop-widths {
   .reviews{
     margin: 0 auto;
-    width: 875px;
-    padding-left: 175px;
+    margin-top: 55px;
+    width: 1050px;
+    &-wrapper{
+      width:875px;
+      padding-left: 175px;
+      padding-top: 70px;
+    }
     &__title{
       font-size: 53px;
       line-height: 57px;
     }
+    &__item{
+      padding-bottom: 95px;
+      & p{
+      width:785px;
+      margin-bottom: 27px;
+      }
+    }
   }
+
+  .control {
+    bottom: 61px;
+    right: -2px;
+  }
+
   .reviews__prev,
   .reviews__next{
     border: none;
