catalod карточка товара

--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -6,3 +6,16 @@
     padding: 70px 0 76px 0;
   }
 }
+
+@media @tablet-widths {
+  .main-header{
+    margin-bottom: 85px;
+    &__title{
+      padding-top: 94px;
+      & h1{
+        font-size: 43px;
+        line-height: 50px;
+      }
+    }
+  }
+}
