--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -52,13 +52,18 @@
     &__item{
       width: 100%;
       display: flex;
-      margin-bottom: 50px;
+      margin-bottom: 53px;
     }
   }
   .catalog-item-footer{
     padding-top: 20px;
     padding-bottom: 25px;
     border-top: 1px solid @border-color;
+    &__cost{
+      font-size: 17px;
+      line-height: 24px;
+      font-weight: bold;
+    }
   }
   .catalog-item-footer__basket{
     width: 177px;
@@ -74,17 +79,29 @@
     padding-top: 60px;
     padding: 0;
     width: 41%;
-    margin: 0 30px;
+    height:333px;
+    margin: 0 26px;
     &__title{
-      padding-top: 30px;
+      padding-top: 23px;
+      padding-bottom: 7px;
       font-size:20px;
       line-height: 24px;
     }
     & p{
       font-size: 15px;
       line-height: 30px;
-      padding-bottom: 100px;
+      min-height: 100px;
+      padding-bottom: 103px;
     }
+  }
+  .catalog-item-footer{
+    padding-left: 5px;
+  }
+  .catalog-item-footer__basket{
+    width: 174px;
+  }
+  .catalog-item-footer__cost{
+    padding-bottom: 50px;
   }
 }
 
