--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -19,3 +19,16 @@
     }
   }
 }
+
+//desktop
+
+@media @desktop-widths {
+  .main-header{
+    &__title{
+      & h1{
+        font-size: 53px;
+        line-height: 57px;
+      }
+    }
+  }
+}
