--- a/less/blocks/order-form.less
+++ b/less/blocks/order-form.less
@@ -33,12 +33,13 @@
 //tablet
 
 @media @tablet-widths {
-  .order-form__title {
-    padding: 70px 0;
+  .order-form-header__title {
+    padding-top: 92px;
+    padding-bottom: 83px;
     background-color: @bg-footer;
     & h1{
-      font-size: 53px;
-      line-height: 57px;
+      font-size: 43px;
+      line-height: 50px;
     }
   }
   .order-form{
