--- a/less/blocks/filter-color.less
+++ b/less/blocks/filter-color.less
@@ -56,11 +56,11 @@
 
 @media @tablet-widths {
   .filter-color{
+    width: 100%;
     padding: 0;
-    margin: 40px auto;
     background-color: @bg-footer;
     &__wrapper{
-      padding-top: 30px;
+      padding-top: 39px;
       width: 668px;
       margin: 0 auto;
       display: flex;
@@ -70,6 +70,7 @@
     &__header{
       width: 25%;
     }
+
     &__list{
       width: 75%;
       display: flex;
@@ -77,14 +78,28 @@
       flex-wrap: wrap;
     }
     &__item{
+      padding-left: 80px;
       font-size: 19px;
       line-height: 18px;
-      margin-bottom:30px;
+      margin-bottom:35px;
       width: 50%;
+      & label{
+        font-size: 19px;
+        line-height: 18px;
+      }
     }
   }
   .filter-color__title::after{
     display: none;
+  }
+  .filter-color__item input[type="checkbox"] + label::before{
+    width: 50px;
+    height: 48px;
+    top: -14px;
+  }
+  .filter-color__item input[type="checkbox"]:checked + label::after{
+    left: 11px;
+    top: 2px;
   }
 }
 
