--- a/less/blocks/filter-color.less
+++ b/less/blocks/filter-color.less
@@ -59,6 +59,7 @@
     width: 100%;
     padding: 0;
     background-color: @bg-footer;
+    padding-bottom: 35px;
     &__wrapper{
       padding-top: 39px;
       width: 668px;
@@ -78,6 +79,7 @@
       flex-wrap: wrap;
     }
     &__item{
+      box-sizing: border-box;
       padding-left: 80px;
       font-size: 19px;
       line-height: 18px;
@@ -92,6 +94,22 @@
   .filter-color__title::after{
     display: none;
   }
+
+  .filter-color__item:nth-child(2n){
+    padding-left: 91px;
+
+    & input[type="checkbox"] + label::before{
+      width: 50px;
+      height: 48px;
+      top: -14px;
+      left: 11px;;
+    }
+    & input[type="checkbox"]:checked + label::after{
+      left: 22px;
+      top: 1px;
+    }
+  }
+
   .filter-color__item input[type="checkbox"] + label::before{
     width: 50px;
     height: 48px;
@@ -116,5 +134,24 @@
     &__item{
       width: 33%;
     }
+  }
+  .filter-color__item:nth-child(2n){
+    padding-left: 80px;
+
+    & input[type="checkbox"] + label::before{
+      left: 0px;
+    }
+
+    & input[type="checkbox"]:checked + label::after{
+      left: 8px;
+      top: 1px;
+    }
+  }
+  .filter-color__item input[type="checkbox"] + label::before{
+    left: 0px;
+  }
+  .filter-color__item input[type="checkbox"]:checked + label::after{
+    left: 8px;
+    top: 1px;
   }
 }
