--- a/less/blocks/filter-type.less
+++ b/less/blocks/filter-type.less
@@ -116,5 +116,30 @@
 //desktop
 
 @media @desktop-widths {
-
+  .filter-type{
+    width: 1050px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 14px;
+    &__header{
+      width: 16%;
+    text-align: center;
+    padding-right: 10px;
+    padding-top: 3px;
+    }
+    &__item{
+      padding-left: 77px;
+    }
+  }
+  .filter-type__header--padding-top{
+    padding-top: 26px;
+  }
+  .filter-type__item input[type="radio"] + label::before{
+    top: -12px;
+    left: -3px;
+  }
+  .filter-type__item input[type="radio"]:checked + label::after{
+    left: 12px;
+    top: 3px;
+  }
 }
