--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -11,7 +11,7 @@
 }
 
 .item-content {
-  padding: 24px 27px 30px 27px;
+  padding: 24px 27px 30px;
 
   & p {
     margin: 0;
@@ -20,20 +20,20 @@
   }
 }
 
-
 .catalog-item-footer {
   border-top: 1px solid @border-color;
   padding-top: 19px;
 }
 
-.catalog-item-footer__cost{
+.catalog-item-footer__cost {
   font-weight: bold;
   font-size: 15px;
   width: 90px;
-  display:inline-block;
-  word-wrap:break-word;
+  display: inline-block;
+  word-wrap: break-word;
 }
-.catalog-item-footer__basket{
+
+.catalog-item-footer__basket {
   width: 109px;
   display: inline-block;
   height: 21px;
@@ -41,74 +41,79 @@
   background-position: right;
   text-align: right;
 }
-
 //планшет
-
 @media @tablet-widths {
-  .catalog{
+  .catalog {
     margin: 0 auto;
     width: 668px;
     padding: 0;
-    &__item{
+
+    &__item {
       width: 100%;
       display: flex;
       margin-bottom: 53px;
     }
   }
-  .catalog-item-footer{
+
+  .catalog-item-footer {
     padding-top: 20px;
     padding-bottom: 25px;
     border-top: 1px solid @border-color;
-    &__cost{
+
+    &__cost {
       font-size: 17px;
       line-height: 24px;
       font-weight: bold;
     }
   }
-  .catalog-item-footer__basket{
+
+  .catalog-item-footer__basket {
     width: 177px;
   }
-  .catalog-item-image{
+
+  .catalog-item-image {
     width: 50%;
-    & img{
+
+    & img {
       width: 100%;
-      height: 100%
+      height: 100%;
     }
   }
-  .item-content{
+
+  .item-content {
     position: relative;
-    padding-top: 60px;
     padding: 0;
     width: 41%;
-    min-height:333px;
+    min-height: 333px;
     margin: 0 26px;
-    &__title{
+
+    &__title {
       padding-top: 23px;
       padding-bottom: 7px;
-      font-size:20px;
+      font-size: 20px;
       line-height: 24px;
     }
-    & p{
+
+    & p {
       font-size: 15px;
       line-height: 30px;
     }
   }
-  .catalog-item-footer{
+
+  .catalog-item-footer {
     position: absolute;
     bottom: 5px;
     left: 0;
     padding-left: 5px;
   }
-  .catalog-item-footer__basket{
+
+  .catalog-item-footer__basket {
     width: 174px;
   }
-
 }
-
 //desktop
-
 @media @desktop-widths {
-  .catalog{
+  .catalog {
     width: 1050px;
     flex-direction: row;
     display: flex;
@@ -116,18 +121,20 @@
     margin-bottom: 58px;
     justify-content: space-between;
 
-    &__item{
+    &__item {
       margin: 0;
       width: 314px;
       display: flex;
       flex-direction: column;
     }
   }
-  .catalog-item-image{
+
+  .catalog-item-image {
     width: 100%;
     height: 461px;
   }
-  .item-content{
+
+  .item-content {
     min-height: 194px;
     height: auto;
     position: relative;
@@ -136,17 +143,18 @@
     padding: 0 26px;
     box-sizing: border-box;
 
-
-    & p{
-      padding-bottom:40px;
+    & p {
+      padding-bottom: 40px;
     }
   }
-  .catalog-item-footer{
+
+  .catalog-item-footer {
     bottom: 1px;
     margin-left: 21px;
     border-top: 1px solid @border-color;
   }
-  .catalog-item-footer__basket{
+
+  .catalog-item-footer__basket {
     width: 62px;
     padding-left: 100px;
   }
