--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -1,31 +1,31 @@
-.main-header{
+.main-header {
   background-color: @bg-footer;
   margin-bottom: 30px;
-  &__title{
+
+  &__title {
     text-align: center;
-    padding: 70px 0 76px 0;
+    padding: 70px 0 76px;
   }
 }
-
 @media @tablet-widths {
-  .main-header{
+  .main-header {
     margin-bottom: 85px;
-    &__title{
+
+    &__title {
       padding-top: 94px;
-      & h1{
+
+      & h1 {
         font-size: 43px;
         line-height: 50px;
       }
     }
   }
 }
-
 //desktop
-
 @media @desktop-widths {
-  .main-header{
-    &__title{
-      & h1{
+  .main-header {
+    &__title {
+      & h1 {
         font-size: 53px;
         line-height: 57px;
       }
