--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -38,13 +38,10 @@
   font-size: 17px;
   line-height: 16px;
   padding-bottom: 18px;
-  margin: 0 34px;
-  margin-bottom: 32px;
-  width:72%;
+  margin: 0 34px 32px;
+  width: 72%;
 }
-
 //tablet
-
 @media @tablet-widths {
   .video {
     width: 666px;
@@ -53,67 +50,78 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin-bottom: 77px;
-    &__comment{
+
+    &__comment {
       padding-top: 26px;
     }
   }
+
   .video-player {
     order: -1;
     height: 451px;
     border-bottom: 1px solid @border-color;
     background-size: cover;
   }
+
   .video-header {
     margin-top: 30px;
     width: 100%;
     padding: 0 41px;
-    &__camera{
+
+    &__camera {
       margin-top: 4px;
       margin-right: 31px;
     }
-    & h3{
+
+    & h3 {
       margin-top: 8px;
-      font-size:20px;
+      font-size: 20px;
       line-height: 24 px;
       font-weight: bold;
     }
   }
-  .video__comment{
+
+  .video__comment {
     font-size: 15px;
     line-height: 30px;
     color: @p-color;
     margin: 0 40px;
   }
-  .video__make-order{
-    width:100%;
-    margin: 37px 40px 30px 40px;
 
+  .video__make-order {
+    width: 100%;
+    margin: 37px 40px 30px;
   }
 }
 @media @desktop-widths {
-  .video{
+  .video {
     display: block;
     width: 1048px;
-    margin-bottom:105px;
-    &-player{
+    margin-bottom: 105px;
+
+    &-player {
       width: 65%;
       float: left;
     }
-    &-header{
+
+    &-header {
       float: right;
       box-sizing: border-box;
       width: 32%;
       padding-left: 46px;
-      &__camera{
+
+      &__camera {
         margin-top: 10px;
         float: none;
       }
-      & h3{
+
+      & h3 {
         padding-top: 10px;
         width: 100px;
       }
     }
-    &__comment{
+
+    &__comment {
       margin: 0;
       box-sizing: border-box;
       float: right;
@@ -122,7 +130,8 @@
       padding-right: 30px;
       padding-top: 35px;
     }
-    &__make-order{
+
+    &__make-order {
       margin-top: 46px;
       width: 22%;
       float: right;
